[package]
name = "m6809-rs"
version = "0.1.0"
authors = ["Damian Senn <senn@puzzle.ch>"]
edition = "2018"

[lib]
name = "m6809"
path = "src/lib.rs"
crate-type = ["cdylib"]

# [[bin]]
# name = "run"
# path = "src/bin/run.rs"

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false
